Added some config to platformio.ini and USART2 initialization function for USB debug.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,9 @@ include_dir = Inc
 platform = ststm32
 board = disco_f072rb
 framework = stm32cube
+upload_protocol = stlink
+debug_tool = stlink
+monitor_speed = 115200
 
 [env:lab1]
 build_flags = -DLAB1
