--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,26 @@
 src_dir = Src
 include_dir = Inc
 
-[env]
+[env:stm32f072]
 platform = ststm32
 board = disco_f072rb
 framework = stm32cube
 upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
+build_flags =     
+    ; ---  USB‑Device include paths  ---
+    -IMiddlewares/ST/STM32_USB_Device_Library/Core/Inc
+    -IMiddlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc
+    -IUSB_DEVICE/App
+    -IUSB_DEVICE/Target
+    ; (optional) symbols Cube sometimes uses
+    -DUSE_USB_DEVICE_FS
+    -DUSBD_DEBUG_LEVEL=0          ; quiet USB stack
 
-[env:lab1]
-build_flags = -DLAB1
+src_filter =
+    +<*>
+    +<Middlewares/ST/STM32_USB_Device_Library/Core/Src/*.c>
+    +<Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/*.c>
+    +<USB_DEVICE/App/*.c>
+    +<USB_DEVICE/Target/*.c>
