--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [platformio]
 src_dir = Src
 include_dir = Inc
+    
 
 [env:stm32f072]
 platform = ststm32
@@ -28,10 +29,17 @@ build_flags =
     ; (optional) symbols Cube sometimes uses
     -DUSE_USB_DEVICE_FS
     -DUSBD_DEBUG_LEVEL=0          ; quiet USB stack
+    -IDrivers/STM32F0xx_HAL_Driver/Inc
 
 src_filter =
     +<*>
-    +<Middlewares/ST/STM32_USB_Device_Library/Core/Src/*.c>
-    +<Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/*.c>
-    +<USB_DEVICE/App/*.c>
-    +<USB_DEVICE/Target/*.c>
+    +<Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c>   ; + PWR‑EX
+    ; --- USB ---
+    +<../Middlewares/ST/STM32_USB_Device_Library/Core/Src/*.c>
+    +<../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/*.c>
+    +<../USB_DEVICE/App/*.c>
+    +<../USB_DEVICE/Target/*.c>
+    +<../USB_DEVICE/App/usb_device.c>
+
+    -<../Middlewares/**/usbd_conf_template.c>
+    -<../Middlewares/**/usbd_desc_template.c>
