Added MBC1 dump function. Still looking for games to test with. Bank switch function was intended for MBC5 and SHOULD still work for other switching. If having problems check that first.

--- a/platformio.ini
+++ b/platformio.ini
@@ -31,7 +31,7 @@ build_flags =
     -DUSBD_DEBUG_LEVEL=0          ; quiet USB stack
     -IDrivers/STM32F0xx_HAL_Driver/Inc
 
-src_filter =
+build_src_filter =
     +<*>
     +<Drivers/STM32F0xx_HAL_Driver/Src/stm32f0xx_hal_pwr_ex.c>   ; + PWR‑EX
     ; --- USB ---
