--- a/platformio.ini
+++ b/platformio.ini
@@ -45,3 +45,5 @@ build_src_filter =
 
     -<../Middlewares/**/usbd_conf_template.c>
     -<../Middlewares/**/usbd_desc_template.c>
+
+monitor_raw = true
